--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
     <string name="app_name">AboutMe</string>
     <string name="name">Eve Lynn</string>
     <string name="yellow_star">Yellow star</string>
-
+    <string name="what_is_your_nickname">What is your Nickname?</string>
+    <string name="done">Done</string>
     <string name="bio">Hi, my name is Eve Lynn.
 
         \n\nI love fish.
